@@ -17,9 +17,9 @@ final Connection connection = (Connection)application.getAttribute("connection")
   </head>
 
   <body>
-    <h1><x:out select="$challengeDocument/fll/@title"/></h1>
+    <h1><x:out select="$challengeDocument/fll/@title"/></h1>      
     <ul>
-        
+
       <li>Current Tournament -> <%=Queries.getCurrentTournament(connection)%></li>
       
       <li><a href="instructions.jsp">Instructions</a></li>
